# Tally-Counter

./: .gitignore  App.tsx  CLAUDE.md  Gemfile  PrivacyPolicy.md  README.md  app.json  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
android/: keystore.properties.example
android/app/: build.gradle  google-services.json
docs/: PRIVACY.md
fastlane/: Appfile  Fastfile  README.md  Screengrabfile  Snapfile
harmony/: .gitignore  oh-package-lock.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/ar/element/: string.json
harmony/AppScope/resources/base/element/: string.json
harmony/AppScope/resources/bg/element/: string.json
harmony/AppScope/resources/ca/element/: string.json
harmony/AppScope/resources/cs/element/: string.json
harmony/AppScope/resources/da/element/: string.json
harmony/AppScope/resources/de/element/: string.json
harmony/AppScope/resources/el_GR/element/: string.json
harmony/AppScope/resources/en/element/: string.json
harmony/AppScope/resources/et/element/: string.json
harmony/AppScope/resources/fi/element/: string.json
harmony/AppScope/resources/fr/element/: string.json
harmony/AppScope/resources/he_IL/element/: string.json
harmony/AppScope/resources/hi_IN/element/: string.json
harmony/AppScope/resources/hr/element/: string.json
harmony/AppScope/resources/hu/element/: string.json
harmony/AppScope/resources/id_ID/element/: string.json
harmony/entry/: build-profile.json5  hvigorfile.ts
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
ios/: GoogleService-Info.plist  Podfile
ios/TallyCounter/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  VolumeButtonModule.m  VolumeButtonModule.swift
ios/TallyCounter.xcodeproj/: project.pbxproj
ios/TallyCounter.xcworkspace/: contents.xcworkspacedata
ios/TallyCounter/Images.xcassets/AppIcon.appiconset/: Contents.json
ios/TallyCounter/Images.xcassets/LaunchIcon.imageset/: Contents.json
ios/TallyCounter/ar.lproj/: InfoPlist.strings
ios/TallyCounter/bg.lproj/: InfoPlist.strings
ios/TallyCounter/ca.lproj/: InfoPlist.strings
ios/TallyCounter/cs.lproj/: InfoPlist.strings
ios/TallyCounter/da.lproj/: InfoPlist.strings
ios/TallyCounter/de.lproj/: InfoPlist.strings
ios/TallyCounter/el.lproj/: InfoPlist.strings
ios/TallyCounter/en.lproj/: InfoPlist.strings
ios/TallyCounter/es.lproj/: InfoPlist.strings
ios/TallyCounter/et.lproj/: InfoPlist.strings
ios/TallyCounter/fi.lproj/: InfoPlist.strings
ios/TallyCounter/fr.lproj/: InfoPlist.strings
ios/TallyCounter/he.lproj/: InfoPlist.strings
ios/TallyCounter/hi.lproj/: InfoPlist.strings
ios/TallyCounter/hr.lproj/: InfoPlist.strings
ios/TallyCounter/hu.lproj/: InfoPlist.strings
ios/TallyCounter/id.lproj/: InfoPlist.strings
ios/TallyCounter/is.lproj/: InfoPlist.strings
ios/TallyCounter/it.lproj/: InfoPlist.strings
ios/TallyCounter/ja.lproj/: InfoPlist.strings
ios/TallyCounter/ko.lproj/: InfoPlist.strings
ios/TallyCounter/lt.lproj/: InfoPlist.strings
ios/TallyCounter/lv.lproj/: InfoPlist.strings
ios/TallyCounter/ms.lproj/: InfoPlist.strings
ios/TallyCounter/mt.lproj/: InfoPlist.strings
ios/TallyCounter/nb.lproj/: InfoPlist.strings
ios/TallyCounter/nl.lproj/: InfoPlist.strings
ios/TallyCounter/pl.lproj/: InfoPlist.strings
ios/TallyCounter/ro.lproj/: InfoPlist.strings
ios/TallyCounter/ru.lproj/: InfoPlist.strings
ios/TallyCounter/sl.lproj/: InfoPlist.strings
ios/TallyCounter/sq.lproj/: InfoPlist.strings
ios/TallyCounter/sv.lproj/: InfoPlist.strings
ios/TallyCounter/th.lproj/: InfoPlist.strings
ios/TallyCounter/tr.lproj/: InfoPlist.strings
ios/TallyCounter/uk.lproj/: InfoPlist.strings
ios/TallyCounter/ur.lproj/: InfoPlist.strings
ios/TallyCounter/vi.lproj/: InfoPlist.strings
ios/TallyCounter/zh-Hans.lproj/: InfoPlist.strings
ios/TallyCounter/zh-Hant.lproj/: InfoPlist.strings
ios/TallyCounterUITests/: SnapshotHelper.swift  TallyCounterUITests.swift
scripts/: sync-app-names.js  take-screenshots.sh
src/components/: CelebrationOverlay.tsx  ControlButtons.tsx  CounterDisplay.tsx  Header.tsx  HistoryItem.tsx
src/constants/: storage.ts
src/hooks/: useCounter.ts  useGoal.ts  useHistory.ts  useOrientation.ts  useVolumeButtons.ts
src/i18n/: index.ts
src/i18n/translations/: ar.ts  bg.ts  ca.ts  cs.ts  da.ts  de.ts  el.ts  en.ts  es.ts  et.ts  fi.ts  fr.ts  he.ts  hi.ts  hr.ts  hu.ts  id.ts  is.ts  it.ts  ja.ts  ko.ts  lt.ts  lv.ts  ms.ts  mt.ts  nl.ts  no.ts  pl.ts  pt.ts  ro.ts  ru.ts  sk.ts  sl.ts  sq.ts  sv.ts  th.ts  tr.ts  uk.ts  vi.ts  zh.ts
src/screens/: CounterScreen.tsx  HistoryScreen.tsx
src/styles/: colors.ts
src/types/: history.ts
(+114 files in other folders)
